Initial folder structure.

--- a/custom_components/flashforge/manifest.json
+++ b/custom_components/flashforge/manifest.json
@@ -1,1 +1,13 @@
-{"domain": "flashforge", "name": "Flashforge 3D Printer", "version": "1.0.0", "documentation": "https://github.com/pcartwright81/homeassistant-flashforge", "dependencies": [], "codeowners": ["@pcartwright81"], "requirements": ["flashforge-python-api"]}
+{
+    "domain": "flashforge",
+    "name": "Flashforge 3D Printer",
+    "version": "1.0.0",
+    "documentation": "https://github.com/pcartwright81/homeassistant-flashforge",
+    "dependencies": [],
+    "codeowners": [
+        "@pcartwright81"
+    ],
+    "requirements": [
+        "flashforge-python-api"
+    ]
+}
